--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,7 @@
 
     <script type="text/babel">
         // --- API Configuration ---
-        const API_URL = 'http://127.0.0.1:8000';
+        const API_URL = 'https://easygo-8e59dcb51bc1.herokuapp.com/';
 
         // --- React components for icons ---
         const Icon = ({ name, ...props }) => {
