--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             --glass-border: rgba(255, 255, 255, 0.25);
             --sky-400: #38bdf8;
             --sky-500: #0ea5e9;
-            --dark-blue-900: #0f172a;
+            --dark-blue-900: #ffffff;
             --dark-blue-800: #1e293b;
         }
 
@@ -135,7 +135,7 @@
                 <div class="flex items-center justify-between h-16">
                     <div class="flex items-center space-x-3">
                         <img src="D:\trip\templates\logo.png" alt="EasyGo Logo" class="h-8 w-8 object-contain">
-                        <h1 class="text-2xl font-bold text-white">EasyGo</h1>
+                        <h1 class="text-2xl font-bold text-sky-800">EasyGo</h1>
                     </div>
                 </div>
             </div>
